--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "codesleeve/laravel-stapler",
+    "name": "thisismzm/laravel-stapler",
     "description": "Easy file upload management for the Laravel Framework.",
     "keywords": ["laravel", "file", "upload", "S3", "AWS", "stapler", "paperclip"],
     "license": "MIT",
@@ -9,9 +9,15 @@
             "email": "tandrewbennett@hotmail.com"
         }
     ],
+    "repositories": [
+		{
+			"url": "https://github.com/thisismzm/stapler.git",
+			"type": "git"
+		}
+	],
     "require": {
         "php": ">=5.4.0",
-        "codesleeve/stapler": "1.2.*",
+        "thisismzm/stapler": "dev-master",
         "laravel/framework": "4.*|5.*"
     },
     "autoload": {
